--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha3 
	- Fixed bug where Ampache would incorrectly search for album art
		when config option was empty (Thx Karl Hungus)
	- Enabling a Localplay Method will now set Allow Localplay to true
	- Fixed all playlist methods, send, send and clear and clear on 
		send now work correctly
	- Added single song view
	- Added Play Select drop down back in
	- Fixed ordering of catalogs
	- Fixed multi-genre Random Play
	- New Version of Flash player fixes playlist repeat bug (Thx hugoh)
	- Fixed catalog update and album art dump command line tools
	- Removed dead link for renaming an Artist
	- Fixed batch download of a single album
	- Added reset of filters when switching between browse types this
		may be removed in the future...
	- Fixed LastFM submitting even when there was no username/password
	- Put Catalog 'All' Functions back onto catalog view
	- Fixed Admin Preferences reverting to user after first update
	- Fixed Localplay playlist
	- Updated Ajax Load icon (Thx Spocky) 
	- Replaced Flash Player with Lacy Morrow's (http://blog.lacymorrow.com/)
		(Thx Hugoh)
	- Fixed ACL's
	- Fixed incorrect Mime type being passed with transcoded songs due 
		to duplicate headers being passed
	- Fixed an issue where MPD was clearing all but last song in submit
		if its initial state was not play 
	- Added check for PHP5 to prevent ugly errors if missing
	- Fixed issue with NULL localplay controller causing fatal error
	- Fixed the Localplay Controls
	- Fixed Gathering album art to only gather for changed albums
	- Fixed display of catalog to correctly show catalog stats
	- Gather album art now only gathers for the specified catalog
	- Fixed Random methods (rightbar) 